added real links

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 fw-normal">Veggie Check</h1>
       <p class="lead fw-normal">Download the app on the iOS Appstore or Google Play Store!</p>
-      <a class="btn btn-outline-secondary" href="#"> Apple iOS</a>
-      <a class="btn btn-outline-secondary" href="#">Android</a>
+      <a class="btn btn-outline-secondary" href="https://apps.apple.com/us/app/veggie-check/id6444203905"> Apple iOS</a>
+      <a class="btn btn-outline-secondary" href="https://play.google.com/store/games?hl=en_US&gl=US&pli=1">Android</a>
     </div>
     <div class="product-device shadow-sm d-none d-md-block zindexphone"> 
       <img class="pic_scale_light" src="assets/new_crop_light.png" alt="Italian Trulli">
@@ -118,7 +118,7 @@
       <div class="my-3 py-3">
         <h2 class="display-5">Donate</h2>
         <p class="lead">Support the app! It cost $250 yearly for upkeep.</p>
-        <a class="btn btn-outline-secondary" href="">Donate!</a>
+        <a class="btn btn-outline-secondary" href="https://ko-fi.com/jarrettminton">Donate!</a>
       </div>
       <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
         <img class="lower_pic_scale_dark bg-dark shadow-sm mx-auto" src="assets/IMG-6033.PNG"></div>
@@ -127,7 +127,7 @@
       <div class="my-3 py-3">
         <h2 class="display-5">Free means freedom</h2>
         <p class="lead">No ads, no data collection.</p>
-        <a class="btn btn-outline-secondary" href="">Contribute on Github</a>
+        <a class="btn btn-outline-secondary" href="https://github.com/jarrett-m">Contribute on Github</a>
       </div>
       <div class="shadow-sm mx-auto" style="width: 80%; height: 330px; border-radius: 21px 21px 0 0;">
         <img class="lower_pic_scale_dark bg-dark shadow-sm mx-auto" src="assets/IMG-6032.PNG">
