--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="my-3 py-3">
         <h2 class="display-5">Free means freedom</h2>
         <p class="lead">No ads, no data collection.</p>
-        <a class="btn btn-outline-secondary" href="https://github.com/jarrett-m">Contribute on Github</a>
+        <a class="btn btn-outline-secondary" href="https://github.com/jarrett-m/VeggieCheck">Contribute on Github</a>
       </div>
       <div class="shadow-sm mx-auto" style="width: 80%; height: 330px; border-radius: 21px 21px 0 0;">
         <img class="lower_pic_scale_dark bg-dark shadow-sm mx-auto" src="assets/IMG-6032.PNG">
